The client window is now resizable